Updated login screen Fixed notifications

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_activity_main_menu">MainMenu</string>
     <string name="tab_text_1">Contacts</string>
     <string name="tab_text_2">Groups</string>
-    <string name="title_activity_messages_menu">Messages</string>
+    <string name="title_activity_messages_menu">Messages (</string>
     <string name="create_an_account">Create an Account</string>
     <string name="password">Password:</string>
     <string name="confirm_password">Confirm Password:</string>
