--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name="title_activity_contacts">Contacts</string>
     <string name="messages">Messages</string>
+    <string name="error_communicating_with_server_please_try_again_later">Error communicating with server, please try again later</string>
 </resources>
