--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="title_activity_messages_menu">Messages (</string>
     <string name="create_an_account">Create an Account</string>
     <string name="password">Password:</string>
+    <string name="send">Send</string>
+    <string name="send_message">Send New Message</string>
     <string name="confirm_password">Confirm Password:</string>
     <string name="generate_username">Generate Username</string>
     <string name="submit">Submit</string>
