Converted from SharedPreferencesHelper.java to Kotlin DataStoreManager JWT is now only set/retrieved in one place Code cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,4 +125,6 @@
     <string name="messages">Messages</string>
     <string name="error_communicating_with_server_please_try_again_later">Error communicating with server, please try again later</string>
     <string name="title_activity_messages_menu_v2">MessagesMenuV2</string>
+    <string name="title_activity_create_contact">CreateContactActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
